k8s/produccion/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-facturacion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-facturacion
  template:
    metadata:
      labels:
        app: back-facturacion
    spec:
      containers:
        - name: back-facturacion
        # Pendiente: utilizar forma de no hardcodear la imagen y actualizar versiones
          image: southamerica-east1-docker.pkg.dev/construtem/microservicios-construtem/back-facturacion:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          # Aqui se muestran las variables de entorno que se definieron en los secretos
          # Especificamente se encuentran solo las de la base de datos
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
