k8s/produccion/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-facturacion-service
spec:
  type: ClusterIP
  selector:
    app: back-facturacion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
